The content should be finished.

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -11,11 +11,11 @@
 \begin{abstract}
     \textbf{Abstract} \ \ The complexity of modern software systems is constantly growing.
     This requires new ways to be found to better manage large scale software systems.
-    \acrlong{sas}[s] which autonomously manage themselves using well-defined rules
+    \acrfull{sas}[s] which autonomously manage themselves using well-defined rules
     are a solution to this problem.
     Even though these systems are able to adapt themselves,
-    they struggle with unpredicted changes in their context.
-    This can be solved by using \acrlong{oa}[es] for \acrlong{sas}[s] which can optimize these systems.
-    There are already many \acrlong{oa}[es], but no way to classify them.
-    This paper proposes a classification for \acrlong{oa}[es] for \acrlong{sas}[s].
+    they struggle with unpredicted changes in their environment.
+    This can be solved by using \acrfull{oa}[es] for \acrshort{sas} which can optimize these systems.
+    There are already many \acrshort{oa}, but no way to classify them.
+    This paper proposes a classification for \acrshort{oa} for \acrshort{sas}.
 \end{abstract}
