--- a/sections/declaration.tex
+++ b/sections/declaration.tex
@@ -25,9 +25,11 @@ unverändert oder mit Änderungen entnommen wurde.}
 %% ---------------------------------------------
 %% | Replace PLACE and DATE with actual values |
 %% ---------------------------------------------
-\textbf{Karlsruhe, 10.05.2021}
+\textbf{Karlsruhe, 21.07.2021}
 \vspace{1.5cm}
- 
+
+\includegraphics[height=1.5cm]{images/signature.png}
+
 \dotfill\hspace*{8.0cm}\\
 \hspace*{2cm}(\theauthor) 
 \cleardoublepage
