--- a/sections/glossary.tex
+++ b/sections/glossary.tex
@@ -2,3 +2,4 @@
 \newacronym{oa}{OA}{Optimization Approach}
 \newacronym{mapek}{MAPE-K}{Monitor, Analyze, Plan, Execute with Knowledge}
 \newacronym{mape}{MAPE}{Monitor, Analyze, Plan and Execute}
+\newacronym{rac}{RAC}{Reflective Adaptation Control}
