--- a/seminar.tex
+++ b/seminar.tex
@@ -102,7 +102,11 @@
 % - Text styling: paragraphs etc.
 
 \input{sections/abstract.tex}
+
+\input{sections/declaration.tex}
+
 \input{sections/introduction.tex}
+\input{sections/foundations.tex}
 \input{sections/sas_classification.tex}
 \input{sections/proposal.tex}
 \input{sections/existing.tex}
